--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-name: Windows Forms CI
+name: .NET Windows Forms CI
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 env:
   SOLUTION_NAME: fuj.sln
-  PROJECT_NAME: fuj.csproj
+  PROJECT_DIR: fuj
   RUNTIME_ID: win-x64
   BUILD_CONFIGURATION: Release
 
@@ -21,34 +21,33 @@ jobs:
     # 步骤 1：检出代码
     - uses: actions/checkout@v4
 
-    # 步骤 2：安装 .NET 和 Windows 桌面工作负载
+    # 步骤 2：安装 .NET 8 SDK（包含 Windows 桌面组件）
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: |
-          8.0.x
-        include-prerelease: false
+        dotnet-version: 8.0.x
 
-    - name: Install Windows Desktop SDK
-      run: dotnet workload install windowsdesktop
+    # 步骤 3：验证工作负载
+    - name: Verify SDK workloads
+      run: dotnet workload list
 
-    # 步骤 3：解决方案级恢复
+    # 步骤 4：恢复依赖
     - name: Restore dependencies
       run: dotnet restore ${{ env.SOLUTION_NAME }}
 
-    # 步骤 4：构建解决方案
-    - name: Build Solution
+    # 步骤 5：构建项目
+    - name: Build solution
       run: |
         dotnet build ${{ env.SOLUTION_NAME }} `
           -c ${{ env.BUILD_CONFIGURATION }} `
-          -p:Platform=x64 `
+          -p:Platform=${{ env.RUNTIME_ID }} `
           --no-restore
 
-    # 步骤 5：发布应用程序
-    - name: Publish Application
-      working-directory: fuj
+    # 步骤 6：发布应用
+    - name: Publish application
+      working-directory: ${{ env.PROJECT_DIR }}
       run: |
-        dotnet publish ${{ env.PROJECT_NAME }} `
+        dotnet publish ${{ env.SOLUTION_NAME }} `
           -c ${{ env.BUILD_CONFIGURATION }} `
           -r ${{ env.RUNTIME_ID }} `
           --self-contained true `
@@ -57,8 +56,8 @@ jobs:
           -p:DebugType=None `
           -o ../publish
 
-    # 步骤 6：上传构建产物
-    - name: Upload Artifact
+    # 步骤 7：上传产物
+    - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
         name: windows-app
