--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,15 +1,16 @@
-name: .NET Windows Forms CI
+name: Windows Forms CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
   pull_request:
     branches: [ main ]
 
 env:
-  SOLUTION_NAME: fuj/fuj.sln  # 确保实际文件名完全匹配（包括大小写）
-  BUILD_CONFIGURATION: Release
-  RUNTIME_ID: win-x64
+  SOLUTION_PATH: "fuj/fuj.sln"  # 解决方案文件路径
+  PROJECT_DIR: "fuj"            # 项目目录
+  RUNTIME_ID: "win-x64"         # 目标运行时
+  BUILD_CONFIGURATION: "Release"
 
 jobs:
   build:
@@ -17,59 +18,59 @@ jobs:
     timeout-minutes: 15
 
     steps:
-    # 步骤 1：严格检出代码（处理大小写敏感问题）
+    # 步骤 1：严格检出代码（处理路径大小写）
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        lfs: true
-        path-check: true  # 启用路径严格校验
+        path-check: true  # 强制路径校验
 
-    # 步骤 2：验证代码结构
-    - name: Validate repository structure
-      shell: bash
+    # 步骤 2：验证目录结构
+    - name: Validate directory structure
+      shell: pwsh
       run: |
-        echo "当前目录结构："
-        ls -la
-        echo "检查解决方案文件："
-        if [ ! -f "${{ env.SOLUTION_NAME }}" ]; then
-          echo "::error::解决方案文件 ${{ env.SOLUTION_NAME }} 不存在"
+        if (-not (Test-Path -Path "${{ env.SOLUTION_PATH }}")) {
+          Write-Error "解决方案文件不存在：${{ env.SOLUTION_PATH }}"
           exit 1
-        fi
+        }
+        Write-Host "✅ 目录结构验证通过"
 
-    # 步骤 3：优化 .NET 安装（仅安装 SDK）
-    - name: Setup .NET SDK
+    # 步骤 3：安装 .NET SDK（自动包含 Windows 桌面组件）
+    - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x  # 自动包含 Windows 桌面组件
+        dotnet-version: 8.0.x
 
-    # 步骤 4：精确路径恢复
+    # 步骤 4：恢复解决方案依赖
     - name: Restore dependencies
-      run: dotnet restore "./${{ env.SOLUTION_NAME }}"  # 显式指定路径
+      working-directory: ${{ env.PROJECT_DIR }}
+      run: dotnet restore
 
     # 步骤 5：构建解决方案
     - name: Build solution
+      working-directory: ${{ env.PROJECT_DIR }}
       run: |
-        dotnet build "./${{ env.SOLUTION_NAME }}" `
+        dotnet build `
           -c ${{ env.BUILD_CONFIGURATION }} `
           -p:Platform=${{ env.RUNTIME_ID }} `
           --no-restore
 
-    # 步骤 6：发布应用
+    # 步骤 6：发布应用程序
     - name: Publish application
+      working-directory: ${{ env.PROJECT_DIR }}
       run: |
-        dotnet publish "./${{ env.SOLUTION_NAME }}" `
+        dotnet publish `
           -c ${{ env.BUILD_CONFIGURATION }} `
           -r ${{ env.RUNTIME_ID }} `
           --self-contained true `
           -p:PublishSingleFile=true `
           -p:IncludeNativeLibrariesForSelfExtract=true `
           -p:DebugType=None `
-          -o ./publish
+          -o ../publish
 
-    # 步骤 7：上传产物
+    # 步骤 7：上传构建产物
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
         name: windows-app
-        path: ./publish
+        path: publish
         retention-days: 3
