--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 env:
-  PROJECT_PATH: "fuj/fuj.csproj"  # 指向具体的项目文件
+  PROJECT_PATH: "fuj/fuj.csproj"
   BUILD_CONFIGURATION: "Release"
   RUNTIME_ID: "win-x64"
 
@@ -22,24 +22,24 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x  # 确保与项目目标框架一致
+        dotnet-version: 8.0.x
 
-    - name: Restore dependencies
-      run: dotnet restore ${{ env.PROJECT_PATH }}
-
+    # 修复点：使用 PowerShell 正确的多行语法
     - name: Build project
+      shell: pwsh
       run: |
-        dotnet build ${{ env.PROJECT_PATH }} \
-          -c ${{ env.BUILD_CONFIGURATION }} \
+        dotnet build ${{ env.PROJECT_PATH }} `
+          -c ${{ env.BUILD_CONFIGURATION }} `
           --no-restore
 
     - name: Publish application
+      shell: pwsh
       run: |
-        dotnet publish ${{ env.PROJECT_PATH }} \
-          -c ${{ env.BUILD_CONFIGURATION }} \
-          -r ${{ env.RUNTIME_ID }} \
-          --self-contained true \
-          -p:PublishSingleFile=true \
+        dotnet publish ${{ env.PROJECT_PATH }} `
+          -c ${{ env.BUILD_CONFIGURATION }} `
+          -r ${{ env.RUNTIME_ID }} `
+          --self-contained true `
+          -p:PublishSingleFile=true `
           -o ./publish
 
     - name: Upload artifact
